# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created %CREATION_DATE%
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/%PROJECT_NAME%
# =============================================================================

[metadata]
name          = %PROJECT_NAME%
version       = 0.0.0
description   = %PROJECT_DESCRIPTION%
author        = %AUTHOR_NAME%
author_email  = helpdesk@library.caltech.edu
license       = BSD 3-clause license
license_files = LICENSE
url           = https://github.com/caltechlibrary/%PROJECT_URLNAME%
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/%PROJECT_URLNAME%
  Bug Tracker = https://github.com/caltechlibrary/%PROJECT_URLNAME%/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.6

[options.entry_points]
console_scripts = 
  %PROJECT_NAME% = %PROJECT_NAME%.__main__:console_scripts_main
